@@ -1,3 +1,10 @@
+2014-06-16  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/update_manager/update_manager.setup.php,
+	godmode/update_manager/update_manager.php,
+	include/functions_update_manager.php, include/config_process.php:
+	some changes in the update manager.
+
 2014-06-13  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/setup/license.php: fixed the erased the update extension.
